// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. secondary two and two - small 1`] = `
Array [
  <View>
    <View>
      <Text>
        secondary-1
      </Text>
    </View>
    <View />
    <View>
      <Text>
        secondary-2
      </Text>
    </View>
  </View>,
  <View />,
  <View>
    <Text>
      support-1
    </Text>
  </View>,
  <View />,
  <View>
    <Text>
      support-2
    </Text>
  </View>,
]
`;

exports[`2. secondary two and two - medium 1`] = `
<View>
  <View>
    <View>
      <Text>
        secondary-1
      </Text>
    </View>
    <View />
    <View>
      <Text>
        secondary-2
      </Text>
    </View>
  </View>
  <View />
  <View>
    <View>
      <Text>
        support-1
      </Text>
    </View>
    <View />
    <View>
      <Text>
        support-2
      </Text>
    </View>
  </View>
</View>
`;
